# ViT

./: .gitignore  LICENSE  pyproject.toml
src/ViT/: __init__.py  core.py  data.py  trainer.py  utils.py
src/ViT/examples/: smoke_test.py  train.py
tests/: test_core.py
